--- a/index.html
+++ b/index.html
@@ -109,15 +109,25 @@
     <footer>
         <div class="footer-copyright">
             <span>TM & Copyright 2025 Burger King Company LLC. All Rights Reserved.
-                | 
-              <a href="">Do Not Sell Or Share My Personal Information</a></span>
+                |
+                <a href="">Do Not Sell Or Share My Personal Information</a></span>
         </div>
 
         <div class="footer-navbar">
-            <div class="home"><span class="home-icon"><i class="fa-solid fa-house"></i></span> Home</div>
-            <div class="menu"><span class="burger-icon"><i class="fa-solid fa-burger"></i></span> Menu</div>
-            <div class="offers"><span class="coupon-icon"><i class="fa-solid fa-money-bill"></i></span> Offers</div>
-            <div class="rewards"><span class="crown-icon"><i class="fa-solid fa-crown"></i></span> Rewards</div>
+            <a href="index.html">
+                <div class="home"><span class="home-icon"><i class="fa-solid fa-house"></i></span> Home</div>
+            </a>
+            <a href="menu.html">
+                <div class="menu"><span class="burger-icon"><i class="fa-solid fa-burger"></i></span> Menu</div>
+            </a>
+            <a href="">
+                <div class="offers"><span class="coupon-icon"><i class="fa-solid fa-money-bill"></i></span> Offers
+                </div>
+            </a>
+            <a href="">
+                <div class="rewards"><span class="crown-icon"><i class="fa-solid fa-crown"></i></span> Rewards
+                </div>
+            </a>
         </div>
     </footer>
     <!-- footer ended  -->
