--- a/index.html
+++ b/index.html
@@ -120,11 +120,11 @@
             <a href="menu.html">
                 <div class="menu"><span class="burger-icon"><i class="fa-solid fa-burger"></i></span> Menu</div>
             </a>
-            <a href="">
+            <a href="menu.html">
                 <div class="offers"><span class="coupon-icon"><i class="fa-solid fa-money-bill"></i></span> Offers
                 </div>
             </a>
-            <a href="">
+            <a href="rewards.html">
                 <div class="rewards"><span class="crown-icon"><i class="fa-solid fa-crown"></i></span> Rewards
                 </div>
             </a>
