--- a/offers.html
+++ b/offers.html
@@ -84,7 +84,7 @@
             <img src="./assests/promo-item6.avif" alt="">
             <div class="promo-text">
                 <h2>BOGO Original Chicken Sandwich</h2>
-                <span>Buy One Original Chicken Sandwich, Get One Free</span>
+                <span>Buy One Original Chicken Sandwich</span>
             </div>
         </div>
         <div class="promo-item">
