--- a/menu.html
+++ b/menu.html
@@ -87,6 +87,7 @@
      </div>
      <!-- menu section ended  -->
      <!-- footer navbar started  -->
+    <footer>
      <div class="footer-navbar">
         <a href="index.html">
             <div class="home"><span class="home-icon"><i class="fa-solid fa-house"></i></span> Home</div>
@@ -103,6 +104,7 @@
             </div>
         </a>
     </div>
+    </footer>
     <!-- footer navbar ended  -->
 
 </body>
